Trying to fix height of game area on mobile so that How to Play just peeks from the bottom

--- a/src/styles.css
+++ b/src/styles.css
@@ -26,7 +26,7 @@ body {
 	margin-inline: auto;
 	/* padding-block: 0.5rem; */
 	display: grid;
-	grid-template-rows: min-content 1fr min-content;
+	grid-template-rows: min-content max(1fr, 100vmin) min-content;
 }
 
 #header {
